<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="eStartStop" Id="{56ac4119-0a37-4b12-8699-9f9f359d5e28}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE eStartStop :
(
	Stop 	:= 0,
	Start	:= 1
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>